modifié :         .classpath 	nouveau fichier : .settings/org.eclipse.ltk.core.refactoring.prefs 	renommé :         lib/uvl-parser-0.1.0-SNAPSHOT-standalone.jar -> libs/ulv-parser/ulv-parser-standalone/0.1.0/uvl-parser-0.1.0-SNAPSHOT-standalone.jar 	supprimé :        pom.xml 	modifié :         src/main/java/randsampFM/Main.java 	modifié :         src/main/java/randsampFM/featureModel/FMLeaf.java 	modifié :         src/main/java/randsampFM/featureModel/FMMandOpt.java 	modifié :         src/main/java/randsampFM/featureModel/FMOr.java 	modifié :         src/main/java/randsampFM/featureModel/FMXor.java 	modifié :         src/main/java/randsampFM/featureModel/FeatureModel.java 	modifié :         target/classes/randsampFM/Main.class 	supprimé :        target/test-classes/featuremodels/APL-Model/.project 	supprimé :        target/test-classes/featuremodels/APL-Model/model.m 	supprimé :        target/test-classes/featuremodels/APL-Model/model.xml 	supprimé :        target/test-classes/featuremodels/APL/.project 	supprimé :        target/test-classes/featuremodels/APL/model.m 	supprimé :        target/test-classes/featuremodels/APL/model.xml 	supprimé :        target/test-classes/featuremodels/BerkeleyDB/.project 	supprimé :        target/test-classes/featuremodels/BerkeleyDB/model.m 	supprimé :        target/test-classes/featuremodels/BerkeleyDB/model.xml 	supprimé :        target/test-classes/featuremodels/ChatPractice20081030/.project 	supprimé :        target/test-classes/featuremodels/ChatPractice20081030/model.m 	supprimé :        target/test-classes/featuremodels/ChatPractice20081030/model.xml 	supprimé :        target/test-classes/featuremodels/E-Shop/.project 	supprimé :        target/test-classes/featuremodels/E-Shop/Eshop-fm.xml 	supprimé :        target/test-classes/featuremodels/E-Shop/model.m 	supprimé :        target/test-classes/featuremodels/E-Shop/model.xml 	supprimé :        target/test-classes/featuremodels/FameDB/.project 	supprimé :        target/test-c

--- a/.classpath
+++ b/.classpath
@@ -35,6 +35,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/uvl-parser-0.1.0-SNAPSHOT-standalone.jar"/>
+	<classpathentry kind="lib" path="/home/stagiaire-tasc/eclipse-workspace/RandSampFeatureModel/libs/ulv-parser/ulv-parser-standalone/0.1.0/uvl-parser-0.1.0-SNAPSHOT-standalone.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
