--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,23 @@
   <artifactId>randsampFM</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
+  	<!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
   	<dependency>
 	    <groupId>info.picocli</groupId>
 	    <artifactId>picocli</artifactId>
 	    <version>4.6.1</version>
 	</dependency>
+	<!-- Java Class to JSON -->
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-databind</artifactId>
 		<version>2.13.2.2</version>
 	</dependency>
+	<!-- Time measures-->
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.12.0</version>
+	</dependency>
   </dependencies>
-  <!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
 </project>
